--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
+astroid==2.3.1
+isort==4.3.21
+lazy-object-proxy==1.4.2
+mccabe==0.6.1
+mypy==0.720
+mypy-extensions==0.4.1
+pylint==2.4.2
+six==1.12.0
+typed-ast==1.4.0
+typing-extensions==3.7.4
+wrapt==1.11.2
 Flask==1.0.2
 Flask-Session
 requests
