--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
+appdirs==1.4.3
 astroid==2.3.1
+certifi==2020.4.5.1
+distlib==0.3.0
+filelock==3.0.12
+importlib-metadata==1.6.0
 isort==4.3.21
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
 mypy==0.720
 mypy-extensions==0.4.1
+pipenv==2018.11.26
 pylint==2.4.2
 six==1.12.0
 typed-ast==1.4.0
 typing-extensions==3.7.4
+virtualenv==20.0.16
+virtualenv-clone==0.5.4
 wrapt==1.11.2
+zipp==3.1.0
 Flask==1.0.2
 Flask-Session
 requests
+gunicorn== 19.9.0
